# Banco-de-Dados

./: README.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/cadastro/: page.tsx
frontend/app/cadastro/aluno/: page.tsx
frontend/app/cadastro/empresa/: page.tsx
frontend/app/cadastro/professor/: page.tsx
frontend/app/documentation/: page.tsx
frontend/app/home/aluno/: page.tsx
frontend/app/home/empresa/: page.tsx
frontend/app/home/empresa/vagas/: page.tsx
frontend/app/home/professor/: page.tsx
frontend/app/login/: page.tsx
frontend/components/Card/: index.tsx
frontend/components/Header/: index.tsx
frontend/components/JobCard/: index.tsx
frontend/components/StudentCard/: index.tsx
server/: .gitignore  CMakeLists.txt  main.cpp
server/src/: Classes.cpp  Classes.h  main.cpp  teste  teste.cpp
server/src/aluno/: Aluno.cpp  Aluno.h
server/src/class/: Classes.cpp  Classes.h
server/src/empresa/: Empresa.cpp  Empresa.h
server/src/handlers/: VagaHandlers.cpp  VagaHandlers.h
server/src/handlers/vaga/: VagaHandlers.cpp  VagaHandlers.h
server/src/models/aluno/: Aluno.cpp  Aluno.h
server/src/models/empresa/: Empresa.cpp  Empresa.h
server/src/models/pessoa/: Pessoa.cpp  Pessoa.h
server/src/models/professor/: Professor.cpp  Professor.h
server/src/models/usuario/: Usuario.cpp  Usuario.h
server/src/models/vaga/: Vaga.cpp  Vaga.h
server/src/pessoa/: Pessoa.cpp  Pessoa.h
server/src/professor/: Professor.cpp  Professor.h
server/src/usuario/: Usuario.cpp  Usuario.h
server/src/vaga/: Vaga.cpp  Vaga.h
